- Добавил запрос на получение всех процессов пользователя по его id
