# src/main/resources/openapi/api.yaml
@@ -91,6 +91,34 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+  /user/process/{id}:
+    get:
+      tags:
+        - user
+      description: все процессы данного пользователя
+      operationId: getProcessesByUserId
+      parameters:
+        - name: id
+          in: path
+          description: id пользователя, процессы которого нужно получить
+          required: true
+          schema:
+            type: integer
+      responses:
+        '200':
+          description: process response
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Process'
+        default:
+          description: unexpected error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
   /user/{id}:
     get:
       tags:
@@ -1049,6 +1077,7 @@ components:
     User:
       type: object
       required:
+        - id_user
         - fio
         - login
         - password
@@ -1071,6 +1100,7 @@ components:
     UserWithoutPassword:
       type: object
       required:
+        - id_user
         - fio
         - login
         - email
@@ -1086,21 +1116,29 @@ components:
           type: string
         telegram_chat_id:
           type: integer
+
     Role:
       type: object
       required:
+        - id_role
         - name
       properties:
         id_role:
           type: integer
         name:
           type: string
+
     Task:
       type: object
       required:
+        - id_task
+        - process_id
         - user_performer_id
         - role_performer_id
+        - date_start
         - date_end_planning
+        - date_end_fact
+        - status_id
       properties:
         id_task:
           type: integer
@@ -1122,6 +1160,7 @@ components:
     Process_Type:
       type: object
       required:
+        - id_process_type
         - name
         - description
         - time_to_do
@@ -1138,6 +1177,7 @@ components:
     Process_Stage:
       type: object
       required:
+        - id_process_stage
         - process_type_id
         - stage
         - role_id
@@ -1150,6 +1190,7 @@ components:
           type: integer
         role_id:
           type: integer
+
     Status_Type:
       type: string
       enum:
@@ -1159,13 +1200,19 @@ components:
         - agreed
         - denied
         - canceled
+
     Process:
       type: object
       required:
+        - id_process
+        - process_type_id
         - name
         - description
         - user_start_id
+        - date_start
         - date_end_planning
+        - date_end_fact
+        - status_id
       properties:
         id_process:
           type: integer
@@ -1185,6 +1232,7 @@ components:
           $ref: '#/components/schemas/Timestamp'
         status_id:
           type: integer
+
     Timestamp:
       type: object
       required:
@@ -1225,6 +1273,7 @@ components:
         year:
           type: integer
           format: int32
+
     Error:
       type: object
       required:
